style: :lipstick: button style

--- a/src/Components/Comment/style.scss
+++ b/src/Components/Comment/style.scss
@@ -474,6 +474,9 @@ $container-width: 40em;
     }
     button {
       order: 3;
+      padding: 1em 2em;
+      font-weight: 500;
+      font-size: 0.9rem;
     }
   }
 
